--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Poetry Machine</title>
   </head>
   <body>
-    <h1>hi</h1>
+    <h1>AI Poem Generator</h1>
+
+    <footer>
+      Coded by
+      <a href="https://github.com/savi-creates" target="_blank"
+        >Savannah Andresson,</a
+      >is
+      <a
+        href="https://github.com/savi-creates/ai-poem-generator"
+        target="_blank"
+        >open-sourced on GitHub</a
+      >
+      and
+      <a href="https://poetry-machine.netlify.app/" target="_blank"
+        >hosted on Netlify</a
+      >
+    </footer>
   </body>
 </html>
