--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
     <title>Poetry Machine</title>
   </head>
   <body>
-    <h1>AI Poem Generator</h1>
+    <header>
+      <h1>AI Poem Generator</h1>
+    </header>
+
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the topic of the French poem"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        La tombe dit à la rose
+        <br />
+        Des pleurs dont l'aube t'arrose
+      </div>
+    </main>
 
     <footer>
       Coded by
