added a poem example

--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
         <input type="submit" />
       </form>
       <div>
-        La tombe dit à la rose
+        A trusting little leaf of green,
         <br />
-        Des pleurs dont l'aube t'arrose
+        A bold audacious frost;
+        <br />
+        A rendezvous, a kiss or two,
+        <br />
+        And youth for ever lost.
       </div>
     </main>
 
