--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Poetry Machine</title>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <header>
@@ -47,5 +48,6 @@
         >hosted on Netlify</a
       >
     </footer>
+    <script src="src/script.js"></script>
   </body>
 </html>
