--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <form id="poem-generator-form">
           <input
             type="text"
-            placeholder="Enter the topic of the French poem"
+            placeholder="Enter the topic of the poem"
             autofocus
             required
             autocomplete="off"
