--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <body>
     <div class="container">
       <header>
-        <h1>AI Poem Generator</h1>
+        <h1>Poetry Machine</h1>
+        <h2>AI Poem Generator</h2>
       </header>
 
       <main>
@@ -57,6 +58,7 @@
         >
       </footer>
     </div>
+    <div class="floating-words"></div>
     <script src="src/script.js"></script>
   </body>
 </html>
