--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               class="instructions"
               id="user-instructions"
             />
-            <input type="submit" class="submit-button" />
+            <input type="submit" class="submit-button" value="submit" />
           </form>
           <div class="hint">i.e: Book, Lisbon or Apple</div>
         </div>
